# news-ai-analysis

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
news-ai-analysis/: __init__.py  dataset.py  features.py  plots.py
news-ai-analysis/modeling/: predict.py  train.py
news_ai_analysis/: __init__.py  dataset.py
